; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_write.c_create_commit_from_ids.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_write.c_create_commit_from_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@committer_name = common dso_local global i32 0, align 4
@committer_email = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@root_commit_message = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @create_commit_from_ids to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_commit_from_ids(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [1 x i32*], align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32, i32* @committer_name, align 4
  %12 = load i32, i32* @committer_email, align 4
  %13 = call i32 @git_signature_new(i32** %8, i32 %11, i32 %12, i32 123456789, i32 60)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @committer_name, align 4
  %16 = load i32, i32* @committer_email, align 4
  %17 = call i32 @git_signature_new(i32** %7, i32 %15, i32 %16, i32 987654321, i32 90)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load i32*, i32** %6, align 8
  %20 = getelementptr inbounds [1 x i32*], [1 x i32*]* %9, i64 0, i64 0
  store i32* %19, i32** %20, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @g_repo, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* @root_commit_message, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = getelementptr inbounds [1 x i32*], [1 x i32*]* %9, i64 0, i64 0
  %28 = call i32 @git_commit_create_from_ids(i32* %21, i32 %22, i32* null, i32* %23, i32* %24, i32* null, i32 %25, i32* %26, i32 1, i32** %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @git_signature_free(i32* %29)
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @git_signature_free(i32* %31)
  %33 = load i32, i32* %10, align 4
  ret i32 %33
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_signature_new(i32**, i32, i32, i32, i32) #1

declare dso_local i32 @git_commit_create_from_ids(i32*, i32, i32*, i32*, i32*, i32*, i32, i32*, i32, i32**) #1

declare dso_local i32 @git_signature_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
